# GrandQC_IDC-Validation

./: .gitignore  CITATION.cff  CODEBOOK.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: tests.yml
config/: five_slide_demo.csv  pipeline_config.yaml  stratified_22_slide_cohort.csv
docs/: dashboard_integration.md  findings.md  limitations.md  methods.md
grandqc_idc/: __init__.py  cli.py  codebook.py  idc.py  metrics.py  overlays.py  provenance.py  readers.py
manifests/: environment_manifest.txt  model_manifest.csv  provenance_manifest.csv  slide_manifest.csv
notebooks/: 01_idc_experiment.ipynb  02_svs_dicom_validation.ipynb  03_ybr_ict_prevalence.ipynb  04_reference_provenance.ipynb  05_stratified_validation.ipynb
provenance_experiment/: 2024_code_commit.txt  2024_code_device_patch.diff  AUTHORS_NOTE.md  PROVENANCE_AUDIT.md  RECORD.md  comparison_results.csv  minimal_rerun.py
results/summary_tables/: example_a23g_dicom_vs_svs.json  five_slide_equivalence.csv  provenance_5slide.json
src/: build_overlays.py  compare_masks.py  download_gdc_svs.py  download_idc_dicom.py  inspect_dicom_headers.py  query_idc.py  run_grandqc_dicom.py  run_grandqc_svs.py  utils.py
tests/: test_determinism.py  test_mask_alignment.py  test_mask_encoding.py  test_metrics.py  test_reader_routing.py
